<resources>
    <string name="app_name">cloudinterview_chengkai</string>
    <string name="menu_phone">PHONE</string>
    <string name="menu_chat">CHAT</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_explore">EXPLORE</string>
    <string name="menu_wallet">WALLET</string>
    <string name="ok">OK</string>
    <string name="tab_1">容幣</string>
    <string name="tab_2">兌換卷(2)</string>
    <string name="notification">notification</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="interaction_reward">Interaction Rewards</string>
    <string name="social_rewards">Social Rewards</string>
    <string name="revenue">Revenue</string>
</resources>